--- a/index.css
+++ b/index.css
@@ -51,7 +51,7 @@ body {
     border: none;
     border-radius: 5px;
     color: #3D3D3D;
-    font-weight: bold;
+    font-weight: 400px;
 }
 
 #convert-btn:hover {
